# IOTDrive

./: CMakeLists.txt
concrete/: CMakeLists.txt
concrete/include/: AMessage.hpp  ATaskArgs.hpp  CMakeLists.txt  FileManager.hpp  IFileManager.hpp  IMinionProxy.hpp  IResponse.hpp  MasterProxy.hpp  MinionManager.hpp  MinionProxy.hpp  Minion_ReadCommand.hpp  Minion_ReadTaskArgs.hpp  Minion_WriteCommand.hpp  Minion_WriteTaskArgs.hpp  NBDProxy.hpp  NBDServer.hpp  ReadCommand.hpp  ReadResponse.hpp  ResponseManager.hpp  TaskResult.hpp  Ticket.hpp  UID.hpp  WriteCommand.hpp  WriteResponse.hpp
concrete/src/: AMessage.cpp  ATaskArgs.cpp  CMakeLists.txt  FileManager.cpp  MasterProxy.cpp  MinionManager.cpp  MinionProxy.cpp  Minion_ReadCommand.cpp  Minion_ReadTaskArgs.cpp  Minion_WriteCommand.cpp  Minion_WriteTaskArgs.cpp  NBDProxy.cpp  NBDServer.cpp  ReadCommand.cpp  ReadResponse.cpp  ResponseManager.cpp  TaskResult.cpp  Ticket.cpp  UID.cpp  WriteCommand.cpp  WriteResponse.cpp
concrete/test/: CMakeLists.txt  Create8MBFile.cpp  TestAMessageOfirst.cpp  TestDemoMinion1.cpp  TestDemoMinion2.cpp  TestMaster.cpp  create_demo.out  create_file.out  log.txt  minion1.out  minion2.out
framework/: CMakeLists.txt
framework/include/: ASocket.hpp  AsyncInjection.hpp  CMakeLists.txt  DirMonitor.hpp  DispatchCallback.hpp  DllLoader.hpp  FWTPTask.hpp  Factory.hpp  Framework.hpp  Handleton.hpp  ICommand.hpp  IInputProxy.hpp  IListener.hpp  ISchedulerTask.hpp  ISendableSocket.hpp  ITPTask.hpp  ITaskArgs.hpp  LinuxListener.hpp  Logger.hpp  Reactor.hpp  Scheduler.hpp  Singleton.hpp  TCPConnSocket.hpp  TCPListenerSocket.hpp  TSWaitableQueue.hpp  ThreadPool.hpp  UDPSocket.hpp  WaitableQueue.hpp
framework/src/: ASocket.cpp  AsyncInjection.cpp  CMakeLists.txt  DirMonitor.cpp  DllLoader.cpp  FWTPTask.cpp  Framework.cpp  Handleton.cpp  LinuxListener.cpp  Logger.cpp  Reactor.cpp  Scheduler.cpp  TCPConnSocket.cpp  TCPListenerSocket.cpp  ThreadPool.cpp  UDPSocket.cpp  dynlib_handleton2.cpp
framework/test/: CMakeLists.txt  TestAsyncInjection.cpp  TestDirMonitor.cpp  TestDispatchCallback.cpp  TestFactory.cpp  TestFramework.cpp  TestHandleton.cpp  TestLogger.cpp  TestReactor.cpp  TestScheduler.cpp  TestSingleton.cpp  TestThreadPool.cpp  TestWaitableQueue.cpp  test_macros.h
framework/test/ShapesForFactory/: Circle.cpp  Circle.hpp  Line.cpp  Line.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp
framework/test/plugins_src/: ReadPlugin.cpp  ht1.cpp  ht2.cpp  test_plugin1.cpp  test_plugin2.cpp
framework/test/reactor_files/: writefile1.txt
